--- a/index.html
+++ b/index.html
@@ -223,8 +223,10 @@ function post()
 </head>
 <body>
   
-	<h1> Student Form </h1>
+	
     	<a href="dataList.html">Data List </a>
+	<div style="height:40px width:400px;"><h1> Student Form </h1>
+	</div>	
 	<form  method="POST" id="frm" name="myForm" onsubmit="return validate()">
 	<table class="center" cellpadding="2" cellspacing="2" border="0">
 	<tbody><tr>
